# MAP

./: README.md  engine.py  main.py  mamba_custom.py  models_mamba.py
PointMAP/: Mamba3D.py  point_transformer.py
pointnet4D/: model.py  pretrain.py  transformer.py
pointnet4D/HOI4DAS/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pointnet4D/HOI4DAS/configs/: 4dmap_pretrain_hoi4d.yaml  p4_transformer_hoi4d.yaml  pointnet4d_hoi4d.yaml  pointnet4d_plus_hoi4d.yaml
pointnet4D/HOI4DAS/pn4d/: __init__.py
pointnet4D/HOI4DAS/pn4d/data/: __init__.py  hoi4d.py
pointnet4D/HOI4DAS/pn4d/engine/: __init__.py  evaluator.py  pretrainer.py  trainer.py
pointnet4D/HOI4DAS/pn4d/models/: __init__.py  p4_transformer.py  pointnet4d.py  pointnet4d_plus.py
pointnet4D/HOI4DAS/pn4d/modules/: __init__.py  point_4d_conv.py  pointnet_pp_extractor.py  temporal_layers.py  transformer.py
pointnet4D/HOI4DAS/pn4d/ops/: __init__.py  pointnet2_utils.py
pointnet4D/HOI4DAS/pn4d/pretrain/: __init__.py  decoder.py  fourd_map.py
pointnet4D/HOI4DAS/pn4d/utils/: __init__.py  checkpoint.py  distributed.py  logger.py  metrics.py  scheduler.py
pointnet4D/HOI4DAS/scripts/: pretrain_4dmap.py  train_action_seg.py
pointnet4D/HOI4DAS/tests/: test_metrics.py  test_models.py  test_modules.py
